--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Hello vous êtes bien sur le site de Lucas</h1>
+    <div class="box-content">
+        <li class="box"><img src="" alt=""></li>
+        <li class="box"><img src="" alt=""></li>
+        <li class="box"><img src="" alt=""></li>
+        <li class="box"><img src="" alt=""></li>
+    </div>
+    
 </body>
 </html>
